# Android-RWKV-V7-World

./: README.md  gradle.properties  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/demo/rwkv/ai/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sampler.cpp
app/src/main/cpp/include/: sampler.h
app/src/main/java/com/demo/rwkv/ai/: App.java  Atts.java  FileUtils.java  GPTByteUtils.java  GptTokenizer.java  GptTokenizerImp.java  HexUtils.java  MainActivity.java  MyAdapter.java  MyRunnable.java  Pair.java  PathManager.java  PreferencesManager.java  PreferencesUtils.java  RWKVModel.java  Talk.java  TalkFragment.java  Vocab.java  WorldTokenizerImp.java
app/src/main/res/layout/: fragment_answer.xml  include_header.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/demo/rwkv/ai/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
